--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
-# Binaries for programs and plugins
+*.o
+*.wasm
+*.gz
+*.dylib
 *.exe
 *.exe~
 *.dll
 *.so
-*.dylib
-
-# Test binary, built with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
+*.swiftmodule
+*.exe
+*.log
+*.zip
 *.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
+*.pprof
